tests/trybuild/schedule/unexpected_token.stderr
error: no rules expected the token `+`
  --> tests/trybuild/schedule/unexpected_token.rs:40:47
   |
40 |     let schedule = schedule!(task::System(A), + task::System(B),);
   |                                               ^ no rules expected this token in macro call
